# OOP

./: CMakeLists.txt
lw1/: CMakeLists.txt  input.txt  input1.txt  input3.txt  main.cpp  output.txt  output1.txt  output3.txt
lw1/replace/correctOutput/: output4.txt
lw3/car/: CMakeLists.txt  Car.cpp  Car.hpp  main.cpp  сar.test.cpp
replace/: CMakeLists.txt  main.cpp  test.sh
replace/correctOutput/: output1.txt  output2.txt  output3.txt
replace/tests/: input.txt
